[package]
name = "tree-sitter-yarnlock"
description = "Yarnlock grammar for tree-sitter"
version = "0.1.0"
authors = ["Amaan Qureshi <amaanq12@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "yarnlock"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/amaanq/tree-sitter-yarnlock"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
